--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <li><a href="task2.html">Задание №2</a></li>
     <li><a href="task3.html">Задание №3</a></li>
     <li><a href="task4.html">Задание №4</a></li>
-    <li><a href="task5.html">Задание №5</a></li>
+    <li><a href="task5new.html">Задание №5</a></li>
+    <li><a href="task5.html">Задание №6</a></li>
    </ol>
 </body>
 </html>
